last clean code refactor